set(samples_dir ${CMAKE_CURRENT_SOURCE_DIR})
get_filename_component(samples_dir_name ${samples_dir} NAME)

if(F_BUILD_STATIC)
    add_subdirectory(TestEvents)
    add_subdirectory(TestDelayQueue)
    add_subdirectory(TestLog)
    if(ENABLE_DEBUG_MEMORY_TRACE)
        add_subdirectory(TestMemoryTracker)
    endif()

    if(FUNDAMENTAL_BUILD_NETWORK)
        add_subdirectory(TestAsio)
        add_subdirectory(TestProxyServer)
        add_subdirectory(TestTrafficProxy)
        add_subdirectory(TestApplication)
    endif()

    add_subdirectory(TestBasic)
    add_subdirectory(TestMemoryPool)
    add_subdirectory(TestTimerTracker)
endif()

if(F_BUILD_SHARED)
    add_subdirectory(TestRttr)
endif()

if(IMPORT_GTEST)
    add_subdirectory(GtestSample)
    add_subdirectory(TestParallel)
endif()

if(IMPORT_BENCHMARK)
    add_subdirectory(BenchmarkSample)
endif()
