set(samples_dir ${CMAKE_CURRENT_SOURCE_DIR})
get_filename_component(samples_dir_name ${samples_dir} NAME)

if(F_BUILD_STATIC)
    if(FUNDAMENTAL_BUILD_EVENTS)
        add_subdirectory(TestEvents)
    endif()
    add_subdirectory(TestDelayQueue)
    add_subdirectory(TestLog)
    add_subdirectory(TestBase64)
    add_subdirectory(TestFileMutex)
    add_subdirectory(TestArgParser)
    if(ENABLE_DEBUG_MEMORY_TRACE)
        add_subdirectory(TestMemoryTracker)
    endif()

    if(FUNDAMENTAL_BUILD_NETWORK)
        add_subdirectory(TestTrafficProxy)
        if(IMPORT_GTEST)
            add_subdirectory(TestRpc)
        endif()
        if(IMPORT_GTEST)
            add_subdirectory(RpcBenchmark)
        endif()
    endif()

    add_subdirectory(TestBasic)

    add_subdirectory(TestMemoryPool)
    add_subdirectory(TestTimerTracker)
    if(IMPORT_GTEST)
        add_subdirectory(GtestSample)
        add_subdirectory(TestParallel)
        add_subdirectory(TestRandomGenerator)
    endif()

    if(IMPORT_BENCHMARK)
        add_subdirectory(BenchmarkSample)
        add_subdirectory(TestCRTP)
        add_subdirectory(ObjectAllocatorBenchmark)
        add_subdirectory(GroupXorBenchMark)
    endif()

endif()

if(F_BUILD_SHARED)
    if(FUNDAMENTAL_BUILD_RTTR)
        add_subdirectory(TestRttr)
    endif()
endif()
if(FUNDAMENTAL_BUILD_RTTR)
    add_subdirectory(TestRttrPack)
endif()
if(Test_INSTALL)
    add_subdirectory(TestSysLibInstall)
endif()
