set(samples_dir ${CMAKE_CURRENT_SOURCE_DIR})
get_filename_component(samples_dir_name ${samples_dir} NAME)

if(F_BUILD_STATIC)
    if(FUNDAMENTAL_BUILD_EVENTS)
        add_subdirectory(TestEvents)
        if(IMPORT_GTEST)
            add_subdirectory(TestDataStorage)
        endif()
    endif()
    add_subdirectory(TestAlgorithm)
    add_subdirectory(TestDelayQueue)
    add_subdirectory(TestLog)
    add_subdirectory(TestBase64)
    add_subdirectory(TestFileMutex)
    add_subdirectory(TestArgParser)
    if(ENABLE_DEBUG_MEMORY_TRACE)
        add_subdirectory(TestMemoryTracker)
    endif()

    if(FUNDAMENTAL_BUILD_NETWORK)
        add_subdirectory(TestTrafficProxy)
        if(IMPORT_GTEST)
            add_subdirectory(TestRpc)
            add_subdirectory(TestHttpServer)
        endif()
        if(IMPORT_BENCHMARK)
            add_subdirectory(RpcBenchmark)
        endif()
    endif()

    add_subdirectory(TestBasic)

    add_subdirectory(TestMemoryPool)
    add_subdirectory(TestTimerTracker)
    if(IMPORT_GTEST)
        add_subdirectory(GtestSample)
        add_subdirectory(TestHashUtils)
        add_subdirectory(TestParallel)
        add_subdirectory(TestRandomGenerator)
        add_subdirectory(TestIntegerCodec)
        add_subdirectory(TestThreadPool)
    endif()

    if(IMPORT_BENCHMARK)
        add_subdirectory(HashUtilsBenchmark)
        add_subdirectory(BenchmarkSample)
        add_subdirectory(TestCRTP)
        add_subdirectory(ObjectAllocatorBenchmark)
        add_subdirectory(ReadWriteQueueBenchmark)
        add_subdirectory(GroupXorBenchMark)
        add_subdirectory(STLBenchmark)
    endif()
    if(FUNDAMENTAL_ENABLE_SCRIPT_SUPPORT)
        add_subdirectory(RttrScriptTest)
    endif()
endif()

if(F_BUILD_SHARED)
    if(FUNDAMENTAL_BUILD_RTTR)
        add_subdirectory(TestRttr)
    endif()
endif()
if(FUNDAMENTAL_BUILD_RTTR)
    add_subdirectory(TestRttrPack)
endif()
if(Test_INSTALL)
    add_subdirectory(TestSysLibInstall)
endif()

if(IMPORT_GTEST)
    if(FUNDAMENTAL_ENABLE_DATABASE_SUPPORT)
        add_subdirectory(TestDataBaseWrapper)
    endif()
endif()
